fix: invalid test alignment

--- a/themes/uncover.scss
+++ b/themes/uncover.scss
@@ -37,7 +37,6 @@ section {
   line-height: 1.4;
   padding: 30px 70px;
   position: relative;
-  text-align: center;
   width: 1280px;
   word-wrap: break-word;
   z-index: 0;
